--- a/quizApp/templates/experiments/read_experiment.html
+++ b/quizApp/templates/experiments/read_experiment.html
@@ -1,16 +1,37 @@
 {% extends 'header.html' %}
+{% block head %}
+<meta name="csrf-token" content="{{ csrf_token() }}">
+<link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
+<script src="{{ url_for('static', filename='js/moment.min.js')}}"></script>
+<script src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}"></script>
+<script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
+{% endblock %}
+
 {% block title %}
 {{ experiment.name }}
 {% endblock %}
 
+{% import 'macros.html' as macros %}
+
 {% block content %}
   {% if assignment %}
-  <p>Press the start button to begin.</p>
+    <p>Press the start button to begin.</p>
 
-  <a href="{{ url_for('experiments.read_assignment', exp_id=experiment.id,
-  a_id=assignment.id) }}" class="btn btn-primary">Start
-  </a>
-  {% else %}
-  <p>You are done with this experiment.</p>
+    <a href="{{ url_for('experiments.read_assignment', exp_id=experiment.id,
+    a_id=assignment.id) }}" class="btn btn-primary">Start
+    </a>
+  {% elif current_user.has_role("participant") %}
+    <p>You are done with this experiment.</p>
+  {% endif %}
+  {% if current_user.has_role("experimenter") %}
+    <h3>Admin controls</h3>
+    <form action="{{ url_for('experiments.update_experiment',
+    exp_id=experiment.id) }}" method="put" id="create-form">
+      {{ macros.render_field(update_experiment_form.name, value=experiment.name) }}
+      {{ macros.render_field(update_experiment_form.start, value=experiment.start) }}
+      {{ macros.render_field(update_experiment_form.stop, value=experiment.stop) }}
+      {{ macros.render_field(update_experiment_form.submit, value="Save",
+      class_="btn-success") }}
+    </form>
   {% endif %}
 {% endblock %}
