if a graph is missing, show a placeholder

--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -6,8 +6,10 @@
     src: local('Raleway'), local('Raleway-Regular'), url(/static/fonts/Raleway-Regular.ttf) format('truetype');
 }
 
-img {
-    width: 100%;
+.graph-container img {
+    max-width: 100%;
+    margin: auto;
+    display: block;
 }
 
 
