All tests and linters passing

--- a/quizApp/templates/macros.html
+++ b/quizApp/templates/macros.html
@@ -20,7 +20,8 @@
     {% endif %}
   {% elif field.type == 'SubmitField' %}
     {{ render_submit_field(field, label_visible, **kwargs) }}
-  {% elif field.type == 'StringField' or field.type == 'PasswordField' %}
+  {% elif field.type == 'StringField' or field.type == 'PasswordField' or
+      field.type == 'TextAreaField' %}
     {{ render_string_field(field, label_visible, **kwargs) }}
   {% elif field.type == 'DateTimeField' %}
     {{ render_date_time_field(field, label_visible, **kwargs) }}
