--- a/quizApp/templates/core/index.html
+++ b/quizApp/templates/core/index.html
@@ -7,5 +7,5 @@ Training and Quiz
 <p>Login with the id you were assigned to begin.</p>
 <p>Then, continue to the <a href="{{ url_for('experiments.read_experiments') }}">
   Experiments page.</a></p>
-
+<p><a href="{{ url_for('activities.read_activities') }}">Activities page</a></p>
 {% endblock %}
