--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -6,6 +6,10 @@
     src: local('Raleway'), local('Raleway-Regular'), url(/static/fonts/Raleway-Regular.ttf) format('truetype');
 }
 
+form {
+  margin-bottom: 20px;
+}
+
 .graph-container img {
     max-width: 100%;
     margin: auto;
