--- a/quizApp/templates/experiments/settings_experiment.html
+++ b/quizApp/templates/experiments/settings_experiment.html
@@ -17,7 +17,7 @@
 <h3>General settings</h2>
 
 <form action="{{ url_for('experiments.update_experiment',
-exp_id=experiment.id) }}" method="put" id="create-form">
+exp_id=experiment.id) }}" method="put" id="update-experiment-form">
   {{ macros.render_field(update_experiment_form.name, value=experiment.name) }}
   {{ macros.render_field(update_experiment_form.start, value=experiment.start) }}
   {{ macros.render_field(update_experiment_form.stop, value=experiment.stop) }}
