--- a/quizApp/templates/experiments/read_question.html
+++ b/quizApp/templates/experiments/read_question.html
@@ -13,28 +13,38 @@ Quiz
 {% endblock %}
 
 {% block content %}
-  {% for graph in assignment.graphs %}
-  <div class="row graph-container">
-      {{ graph|graph_to_img }}
-  </div>
-  {% endfor %}
+{% for graph in assignment.graphs %}
+<div class="row graph-container">
+  {{ graph|graph_to_img }}
+</div>
+{% endfor %}
 
 <div id='question'>
   <h3>{{ question.question }}</h3>
   <form action="{{ url_for('experiments.update_assignment', exp_id=exp.id,
-        a_id=assignment.id)}}" method="post" id="question-submit-form">
+  a_id=assignment.id)}}" method="post" id="question-submit-form">
     {{ macros.render_field(mc_form.choices) }}
     {% if question.needs_reflection %}
-        <p>Why do you think this is the correct choice?</p>
-        {{ macros.render_field(mc_form.reflection, rows="5") }}
-        <br />
+    <p>Why do you think this is the correct choice?</p>
+    {{ macros.render_field(mc_form.reflection, rows="5") }}
+    <br />
     {% endif %}
-    {{ macros.render_field(mc_form.submit) }}
+    <div class="row">
+      <div class="col-md-6">
+        {% if previous_assignment %}
+        <a href="{{ url_for('experiments.read_assignment', exp_id=exp.id, a_id=previous_assignment.id) }}" class="btn btn-primary" role="button">Previous question</a>
+        {% endif %}
+      </div>
+      <div class="col-md-6 next-button">
+        {{ macros.render_field(mc_form.submit, value="Next") }}
+      </div>
+    </div>
   </form>
 </div>
 <div id="explanation-container">
   <p id="explanation-text"></p>
   <a href="#" role="button" id="continue-link"
-    class="btn btn-primary">Continue</a>
+                            class="btn btn-primary">Continue</a>
 </div>
 {% endblock %}
+
