Fixed styling, reduced redundant code, made explanations show after experiment submission.

--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -270,6 +270,9 @@ ul#answers {
   margin-bottom: 0px;
 }
 
-.next-button input {
+.previous-button {
+  float: left;
+}
+.next-button {
   float: right;
 }
