--- a/quizApp/templates/experiments/experiment_confirm_done.html
+++ b/quizApp/templates/experiments/experiment_confirm_done.html
@@ -5,10 +5,12 @@ Confirm experiment submission
 {% endblock %}
 
 {% block content %}
-<p>If you are ready to submit your answers, click the button below. You will not
-be able to modify your answers after this.</p>
+<p>If you are ready to submit your answers, click the "Submit" button below.
+You will not be able to modify your answers after this.</p>
 
 
 <a href="{{ url_for('experiments.finalize_experiment', exp_id=experiment.id)
 }}" class="btn btn-primary" role="button">Submit</a>
+<a href="{{ url_for('experiments.read_experiment', exp_id=experiment.id) }}"
+   class="btn btn-primary" role="button">Go back to start</a>
 {% endblock %}
