--- a/quizApp/templates/experiments/read_question.html
+++ b/quizApp/templates/experiments/read_question.html
@@ -31,15 +31,16 @@ Quiz
     disabled=experiment_complete) }}
     <br />
     {% endif %}
+    <p id="explanation-text">{{ explanation }}</p>
     <div class="row">
-      <div class="col-md-6">
+      <div class="previous-button">
         {% if previous_assignment %}
         <a href="{{ url_for('experiments.read_assignment', exp_id=exp.id,
-          a_id=previous_assignment.id) }}" class="btn btn-primary"
-          role="button">Previous</a>
+        a_id=previous_assignment.id) }}" class="btn btn-primary"
+                                         role="button">Previous</a>
         {% endif %}
       </div>
-      <div class="col-md-6 next-button">
+      <div class="next-button">
         {% if experiment_complete %}
         <a href="{{ next_url }}" role="button" class="btn btn-primary">Next</a>
         {% else %}
@@ -49,5 +50,4 @@ Quiz
     </div>
   </form>
 </div>
-  <p id="explanation-text"></p>
 {% endblock %}
