Removed old forms/templates, added some calls to reduce repetition in populating experiment settings

--- a/quizApp/templates/experiments/settings_experiment.html
+++ b/quizApp/templates/experiments/settings_experiment.html
@@ -18,10 +18,10 @@
 
 <form action="{{ url_for('experiments.update_experiment',
 exp_id=experiment.id) }}" method="put" id="update-experiment-form">
-  {{ macros.render_field(update_experiment_form.name, value=experiment.name) }}
-  {{ macros.render_field(update_experiment_form.start, value=experiment.start) }}
-  {{ macros.render_field(update_experiment_form.stop, value=experiment.stop) }}
-  {{ macros.render_field(update_experiment_form.blurb, value=experiment.blurb) }}
+  {{ macros.render_field(update_experiment_form.name) }}
+  {{ macros.render_field(update_experiment_form.start) }}
+  {{ macros.render_field(update_experiment_form.stop) }}
+  {{ macros.render_field(update_experiment_form.blurb) }}
   {{ macros.render_field(update_experiment_form.submit, value="Save",
   class_="btn-success") }}
 </form>
