--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -31,6 +31,12 @@
             <li role="presentation">
               <a href="{{ url_for('experiments.read_experiments') }}">Experiments</a>
             </li>
+            {% if current_user.has_role("experimenter") %}
+            <li role="presentation">
+              <a href="{{ url_for('activities.read_activities')
+                }}">Activities</a>
+            </li>
+            {% endif %}
             {% else %}
             <li role="presentation" class="active">
               <a href="{{ url_for('security.login') }}">Login</a>
