--- a/quizApp/templates/experiments/read_experiments.html
+++ b/quizApp/templates/experiments/read_experiments.html
@@ -2,11 +2,9 @@
 {% import 'macros.html' as macros %}
 {% block head %}
 <meta name="csrf-token" content="{{ csrf_token() }}">
-<link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
 <script src="{{ url_for('static', filename='js/common_ajax.js') }}"></script>
 <script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
-<script src="{{ url_for('static', filename='js/moment.min.js')}}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}"></script>
+{{ macros.import_datetimepicker() }}
 {% endblock %}
 
 {% block title %}
@@ -19,13 +17,13 @@ Experiment List
 {% if current_user.has_role("experimenter") %}
 <h3>Future experiments</h3>
 {{ exp_macros.experiment_table(future_experiments, False,
-"future_experiment_table", current_user.has_role("experimenter")) }} 
+"future_experiment_table", current_user.has_role("experimenter")) }}
 <hr>
 {% endif %}
 <h3>Present experiments</h3>
 <form id="create-experiment-form" method="post">
   {{ exp_macros.experiment_table(present_experiments, create_form,
-  "present_experiment_table", current_user.has_role("experimenter")) }} 
+  "present_experiment_table", current_user.has_role("experimenter")) }}
 </form>
 {% if current_user.has_role("experimenter") %}
 <hr>
