--- a/quizApp/templates/experiments/settings_experiment.html
+++ b/quizApp/templates/experiments/settings_experiment.html
@@ -4,11 +4,9 @@
 
 {% block head %}
 <meta name="csrf-token" content="{{ csrf_token() }}">
-<link href="{{ url_for('static', filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
-<script src="{{ url_for('static', filename='js/moment.min.js')}}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap-datetimepicker.js') }}"></script>
 <script src="{{ url_for('static', filename='js/common_ajax.js') }}"></script>
 <script src="{{ url_for('static', filename='js/experiments_ajax.js') }}"></script>
+{{ macros.import_datetimepicker() }}
 {% endblock %}
 
 {% block title %}{{ experiment.name }} - Settings{% endblock %}
