--- a/quizApp/templates/macros.html
+++ b/quizApp/templates/macros.html
@@ -18,12 +18,21 @@
     {{ render_radio_field(field, label_visible, **kwargs) }}
   {% elif field.type == 'SubmitField' %}
     {{ render_submit_field(field, label_visible, **kwargs) }}
+  {% elif field.type == 'SelectField' %}
+    {{ render_select_field(field, label_visible, **kwargs) }}
   {% elif field.type == 'DateTimeField' %}
     {{ render_date_time_field(field, label_visible, **kwargs) }}
   {% else %}
     {{ render_string_field(field, label_visible, **kwargs) }}
 	{% endif %}
 {% endmacro %}
+
+{% macro render_select_field(field, label_visible=true) -%}
+<div class="form-group {% if field.errors %}has-error{% endif %}">
+{{ field(class_="form-control", **kwargs) }}
+</div>
+{% endmacro %}
+
 
 {% macro render_likert_field(field, label_visible=true) -%}
 <div class="form-group {% if field.errors %}has-error{% endif %}">
