--- a/quizApp/templates/activities/read_activities.html
+++ b/quizApp/templates/activities/read_activities.html
@@ -3,6 +3,9 @@
 
 {% block head %}
 {{ macros.import_datatables() }}
+<meta name="csrf-token" content="{{ csrf_token() }}">
+<script src="{{ url_for('static', filename='js/common_ajax.js') }}"></script>
+<script src="{{ url_for('static', filename='js/activities_ajax.js') }}"></script>
 {% endblock %}
 
 {% block title %}
@@ -37,4 +40,10 @@ Activity List
       {% endfor %}
     </tbody>
   </table>
+  <h3>Create new activity</h3>
+  <form action="{{ url_for('activities.create_activity') }}" method="post"
+    id="create-activity-form">
+    {{ macros.render_field(activity_type_form.activity_type) }}
+    {{ macros.render_field(activity_type_form.submit, value="Create") }}
+  </form>
 {% endblock %}
