--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -36,6 +36,10 @@
               <a href="{{ url_for('activities.read_activities')
                 }}">Activities</a>
             </li>
+            <li role="presentation">
+              <a href="{{ url_for('datasets.read_datasets')
+                }}">Datasets</a>
+            </li>
             {% endif %}
             {% else %}
             <li role="presentation" class="active">
