Implemented flashing graphs, closes #14

--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -10,7 +10,7 @@ form {
   margin-bottom: 20px;
 }
 
-.graph-container img {
+.media-item-container img {
     max-width: 100%;
     margin: auto;
     display: block;
