Better likert and choice rendering.
- Likert scale supports arbitrary number of points now
- Choices are rendered with labels
- No flashing once experiment is done

Fixes #15, #42

--- a/quizApp/templates/experiments/read_question.html
+++ b/quizApp/templates/experiments/read_question.html
@@ -15,7 +15,10 @@ Quiz
 {% block content %}
 {% for graph in assignment.graphs %}
 <div class="row media-item-container"
-  data-flash-duration="{{ graph.flash_duration }}">
+  {% if not experiment_complete %}
+  data-flash-duration="{{ graph.flash_duration }}"
+  {% endif %}
+  >
   {{ graph|graph_to_img }}
 </div>
 {% endfor %}
