--- a/quizApp/static/css/main.css
+++ b/quizApp/static/css/main.css
@@ -162,40 +162,22 @@ nav .site-name a:hover{
     opacity: .9;
 }
 
-form .likert {
-  list-style:none;
-  width:100%;
-  margin:0;
-  padding:0 0 35px;
-  display:block;
-  border-bottom:2px solid #efefef;
+.likert {
+  width: 100%;
+  display: table;
+  table-layout: fixed;
+  /* the magic dust that ensure equal width */
 }
-form .likert:last-of-type {border-bottom:0;}
-form .likert:before {
-  content: '';
-  position:relative;
-  top:11px;
-  left:9.5%;
-  display:block;
-  background-color:#efefef;
-  height:4px;
-  width:78%;
-}
-form .likert li {
-  display:inline-block;
-  width:19%;
-  text-align:center;
-  vertical-align: top;
-}
-form .likert li input[type=radio] {
-  display:block;
-  position:relative;
-  top:0;
-  left:50%;
-  margin-left:-6px;
 
+.likert li {
+  display: table-cell;
+  text-align: center;
+  list-style-type: none;
 }
-form .likert li label {width:100%;}
+
+.likert li label {
+  display: block;
+}
 
 body {
   padding-top: 20px;
